--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,7 @@
 @import '@fontsource/barlow/600.css';
 @import '@fontsource/barlow/700.css';
 @import '@fontsource/barlow/800.css';
+@import 'leaflet/dist/leaflet.css';
 
 /** **************************************
 * Fonts: options
